--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,9 @@
 name: Test
 
 on:
+  push:
+    branches:
+      - trunk
   pull_request:
 
 jobs:
@@ -12,7 +15,7 @@ jobs:
       matrix:
         python-version:
           - "3.10"
-          # - "3.11"
+          - "3.11"
 
     steps:
       - uses: actions/checkout@v3
