--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,18 @@ tabulate = {version = "^0.9.0", extras = ["widechars"]}
 humanize = "^4.6.0"
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.12.0"
-isort = "^5.11.4"
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
 freezegun = "^1.2.2"
+
+[tool.poetry.group.lint.dependencies]
+flake8 = "^6.0.0"
+flake8-black = "^0.3.6"
+flake8-isort = "^6.0.0"
+flake8-pytest-style = "^1.6.0"
+flake8-cognitive-complexity = "^0.1.0"
+flake8-comprehensions = "^3.10.1"
+flake8-bugbear = "^23.1.20"
 
 [tool.poetry.scripts]
 bollard = "bollard:main"
